--- a/WebAppFitly/Views/Home/Sporter.cshtml
+++ b/WebAppFitly/Views/Home/Sporter.cshtml
@@ -57,7 +57,7 @@
             <td>
                 <a asp-action="CreateEditSporter" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="/" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="DeleteSporter" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
