--- a/WebAppFitly/Views/Home/EditSporter.cshtml
+++ b/WebAppFitly/Views/Home/EditSporter.cshtml
@@ -1,14 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Create Sporter";
+﻿
+@{
+
+    ViewData["Title"] = "Edit Sporter";
 }
 @model Fitly_Domain.Business.Sporter
 
 <div class="text-center">
-    <h1 class="display-4">Create or edit a sporter</h1>
-    
+    <h1 class="display-4">Edit a sporter</h1>
+
 </div>
 <form asp-action="CreateEditSporterForm" asp-asp-controller="Home">
-   @*  <label>Id</label>
+    @*  <label>Id</label>
     <input class="form-control" type="number" placeholder="0" asp-for="Id" /> *@
 
     <label class="mt-4">Naamsporter</label>
