--- a/WebAppFitly/Views/Home/Sporter.cshtml
+++ b/WebAppFitly/Views/Home/Sporter.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Fitly_Domain.Business.Sporter>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateEditSporter">Create New</a>
+    
 </p>
 <table class="table">
     <thead>
@@ -55,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.Geslacht)
             </td>
             <td>
-                <a asp-action="CreateEditSporter" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="EditSporter" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="/" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="DeleteSporter" asp-route-id="@item.Id">Delete</a>
             </td>
