verbetring van de mevrouw toegevoegd en aangepast

--- a/WebAppFitly/Views/Home/Oefeningen.cshtml
+++ b/WebAppFitly/Views/Home/Oefeningen.cshtml
@@ -6,8 +6,8 @@
 <div class="container text-center mt-5">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="display-4 fw-bold">Your Workout</h1>
-            <p class="lead">Here are the exercises for your selected workout:</p>
+            <h1 class="display-4 fw-bold">U workout:</h1>
+            <p class="lead">Oefeningen bij jou workout:</p>
         </div>
     </div>
 
@@ -31,7 +31,7 @@
             }
             else
             {
-                <p>No exercises found for this workout.</p>
+                <p>Nog geen oefeningen voor deze workout.</p>
             }
         </div>
     </div>
