--- a/WebAppFitly/Views/Home/EditSporter.cshtml
+++ b/WebAppFitly/Views/Home/EditSporter.cshtml
@@ -14,25 +14,25 @@
     <input class="form-control" type="number" placeholder="0" asp-for="Id" /> *@
 
     <label class="mt-4">Naamsporter</label>
-    <input class="form-control" type="text" placeholder="add a description" asp-for="NaamSporter" />
+    <input class="form-control" type="text"  asp-for="NaamSporter" />
 
     <label class="mt-4">Voornaamsporter</label>
-    <input class="form-control" type="text" placeholder="add a description" asp-for="VoornaamSporter" />
+    <input class="form-control" type="text"  asp-for="VoornaamSporter" />
 
     <label class="mt-4">Mailsporter</label>
-    <input class="form-control" type="text" placeholder="add a description" asp-for="MailSporter" />
+    <input class="form-control" type="text" asp-for="MailSporter" />
 
     <label class="mt-4">Wachtwoord</label>
-    <input class="form-control" type="text" placeholder="add a description" asp-for="Wachtwoord" />
+    <input class="form-control" type="text"  asp-for="Wachtwoord" />
 
     <label class="mt-4">GeboortedatumSporter</label>
-    <input class="form-control" type="date" placeholder="/" asp-for="GeboortedatumSporter" />
+    <input class="form-control" type="date" asp-for="GeboortedatumSporter" />
 
     <label class="mt-4">Lengte</label>
-    <input class="form-control" type="number" placeholder="0" asp-for="Lengte" />
+    <input class="form-control" type="number" asp-for="Lengte" />
 
     <label class="mt-4">Geslacht</label>
-    <input class="form-control" type="text" placeholder="add a description" asp-for="Geslacht" />
+    <input class="form-control" type="text" asp-for="Geslacht" />
 
     <button class="btn btn-primary mt-4" type="submit">Ok</button>
 
