--- a/WebAppFitly/Views/Home/Oefeningen.cshtml
+++ b/WebAppFitly/Views/Home/Oefeningen.cshtml
@@ -1,38 +1,36 @@
 ﻿@model IEnumerable<Fitly_Domain.Business.Oefening>
+
 @{
-    ViewData["Title"] = "Oefeningen";
+    ViewData["Title"] = "Selecteer Oefeningen";
 }
 
-<div class="container text-center mt-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="display-4 fw-bold">U workout:</h1>
-            <p class="lead">Oefeningen bij jou workout:</p>
-        </div>
-    </div>
+<form asp-action="GekozenOefeningen" asp-controller="Home" method="post">
+    <h3 class="mt-5 text-center">Kies je oefeningen</h3>
 
-    <!-- Exercise List -->
-    <div class="row mt-4">
-        <div class="col">
-            @if (Model.Any())
+    <table class="table table-hover mt-4">
+        <thead class="table-light">
+            <tr>
+                <th>Kies</th>
+                <th>Oefening</th>
+                <th>Calorieën per minuut</th>
+                <th>Omschrijving</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var oefening in Model)
+
             {
-                <ul class="list-group">
-                    @foreach (var oefening in Model)
-                    {
-                        <li class="list-group-item">
-                            <h5>@oefening.Naam</h5>
-                            <p>@oefening.Omschrijving</p>
-                            <p>Calories: @oefening.Calorieën</p>
-                            <p>Herhalingen: @oefening.Herhalingen</p>
-                            <p>Duur: @oefening.Duur minuten</p>
-                        </li>
-                    }
-                </ul>
+                <tr>
+                    <td>
+                        <input type="checkbox" name="gekozenOefeningen" value="@oefening.IdOefening" />
+                    </td>
+                    <td>@oefening.Naam</td>
+                    <td>@oefening.Calorieën</td>
+                    <td>@oefening.Omschrijving</td>
+                </tr>
             }
-            else
-            {
-                <p>Nog geen oefeningen voor deze workout.</p>
-            }
-        </div>
-    </div>
-</div>
+        </tbody>
+    </table>
+
+    <button type="submit" class="btn btn-primary mt-3">Doe oefeningen</button>
+</form>
