--- a/WebAppFitly/Views/Shared/_LoginPartial.cshtml
+++ b/WebAppFitly/Views/Shared/_LoginPartial.cshtml
@@ -17,10 +17,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-dark" asp-action="CreateEditSporter">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-dark" asp-action="LoginSporter">Login</a>
     </li>
 }
 </ul>
