--- a/WebAppFitly/wwwroot/css/site.css
+++ b/WebAppFitly/wwwroot/css/site.css
@@ -20,3 +20,9 @@ html {
 body {
   margin-bottom: 60px;
 }
+.timerDisplay {
+    display: inline-block;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: green;
+}
