--- a/WebAppFitly/Views/Home/LoginSporter.cshtml
+++ b/WebAppFitly/Views/Home/LoginSporter.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Login</h1>
 </div>
 
-<form asp-action="LoginSporter" asp-controller="Home" >
+<form asp-action="Login" asp-controller="Home" >
     <label class="mt-4">Email</label>
     <input class="form-control" type="email" asp-for="MailSporter" required />
 
