--- a/WebAppFitly/Views/Shared/_Layout.cshtml
+++ b/WebAppFitly/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -13,34 +14,59 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Welcome">WebAppFitly</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" >Fitly</a>
                 <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                </li>
+
+                        @{
+                            int? sporterId = Context.Session.GetInt32("SporterId");
+                        }
+                        @if (sporterId != null)
+                        {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Workout">Workout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Progressie">Progressie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddDeleteChangeWorkout">Beheer Workout</a>
+                        </li>
+                        
+                        }
+                    
+                        @if (sporterId == null)
+                        {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        
+                        
+                        }
+                        @if (sporterId == 2)
+                        {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sporter">Sporter</a>
+                        </li>
+
+                        }
+                    
+                    
                 </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-
-                    @if (User.Identity != null && User.Identity.IsAuthenticated)
+                    
+                        
+                    
+                    @if (sporterId != null)
                     {
-                        <ul class="navbar-nav flex-grow-1">
-                            
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sporter">Sporter</a>
-                            </li>
-                        </ul>
+                        <span class="navbar-text">Welkom, @Context.Session.GetString("SporterNaam")</span>
+                        <a class="nav-link" asp-controller="Home" asp-action="Logout">Logout</a>
+                      
                     }
-
                     <partial name="_LoginPartial" />
                 </div>
             </div>
